# dean_forces

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/dean_forces/: TEMPLATE.md  __init__.py  app.py  gui.py
tests/: test_app.py
